<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.askseoulites.seoulcityapp.activities.ProfileActivity.ProfileFirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:id="@+id/topProfileLayout"
        android:orientation="vertical"
        android:layout_height="240dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <co.askseoulites.seoulcityapp.widgets.AvatarView
            android:layout_width="@dimen/avatar_size_profile"
            android:layout_height="@dimen/avatar_size_profile"
            android:id="@+id/profilePic"
            android:background="@drawable/avatar_6_raster"
            android:layout_gravity="center"
            />
        <Switch
            android:layout_width="100dp"
            android:text="Public"
            android:id="@+id/profilePrivacy"
            android:padding="4dp"
            android:layout_gravity="right|top"
            android:layout_height="30dp" />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:id="@+id/user_name"
            android:text="@string/_answer_submitted"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:id="@+id/lowLevel"
            android:text="Level 1"/>
        <ProgressBar
            android:id="@+id/progress_user"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:progress="50"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_double"
            android:layout_marginRight="@dimen/spacing_double"
            android:progressTint="?android:colorAccent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:id="@+id/highLevel"
            android:layout_height="wrap_content"
            android:text="Level 8"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1.0"
        android:id="@+id/middleProfileLayout"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/topProfileLayout"
        android:layout_height="60dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/followersView"
                android:text="@string/followers"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:id="@+id/followersCount"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="100"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/followingView"
                android:text="@string/following"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="@dimen/profile_field_header"
                android:id="@+id/followingCount"
                android:layout_marginTop="24dp"
                android:text="100"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:id="@+id/questionsView"
                android:text="@string/questions"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/questionsCount"
                android:textSize="@dimen/profile_field_header"
                android:layout_marginTop="24dp"
                android:text="100"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:id="@+id/answersView"
                android:text="@string/answers"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/profile_field_header"
                android:layout_marginTop="24dp"
                android:id="@+id/answersCount"
                android:gravity="center_horizontal"
                android:text="100"/>
        </FrameLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_user_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/middleProfileLayout"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="-15dp"
        android:tint="@android:color/white"
        app:layout_anchor="@+id/profileTagsRV"
        android:layout_alignParentRight="true"
        app:layout_anchorGravity="bottom|end|right"
        android:src="@android:drawable/ic_input_add" />

    <GridView
        android:id="@+id/profileTagsRV"
        android:layout_marginTop="-20dp"
        android:layout_below="@id/fab_add_user_tag"
        android:layout_width="match_parent"
        android:numColumns="4"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:cropToPadding="true"
        android:listSelector="@android:color/transparent"
        android:verticalSpacing="@dimen/spacing_double" />



</RelativeLayout>
